<resources>
    <string name="app_name">EmailLogin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_member">New Member</string>
    <string name="register_now">Register Now</string>
    <string name="select_checkbaox">Please select checkbox.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_password_minimum_characters">Please enter password minimum 6 characters.</string>
    <string name="title_activity_dashboard">Dashboard</string>
</resources>