<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    <variable
        name="viewModel"
        type="com.gwl.emaillogin.login.LoginVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30dp"
            android:background="@drawable/rounded_gray_drawable"
            android:hint="@string/enter_your_email"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/iv_main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/transparent_black"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.updateEmail(String.valueOf(text))}"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/ic_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30dp"
            android:background="@drawable/rounded_gray_drawable"
            android:hint="@string/password"
            app:hintTextColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/et_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                app:hintTextColor="@color/transparent_black"
                android:background="@android:color/transparent"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.updatePassword(String.valueOf(text))}"
                android:drawableEnd="@drawable/ic_lock" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30dp"
            android:text="@string/remember_me"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_9sp"
            android:layout_marginTop="@dimen/_9dp"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toTopOf="@id/checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30dp"
            android:text="@string/forget_password"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_9sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_9dp"
            app:layout_constraintTop_toTopOf="@id/checkbox" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15dp"
            android:background="@drawable/rounded_button_drawable"
            android:onClick="@{()->viewModel.clickNext()}"
            android:padding="@dimen/_15dp"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_new_member" />

        <TextView
            android:id="@+id/tv_new_member"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15dp"
            android:gravity="end"
            android:text="@string/new_member"
            android:textSize="@dimen/_13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_register_now"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_register_now"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2dp"
            android:layout_marginBottom="@dimen/_15dp"
            android:text="@string/register_now"
            android:textColor="@color/primary_color"
            android:onClick="@{()->viewModel.clickRegisterNow()}"
            android:textSize="@dimen/_13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_new_member" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>